--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,15 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-simple</artifactId>
+		    <version>1.7.31</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.javalin</groupId>
+    		<artifactId>javalin</artifactId>
+    		<version>4.1.1</version>
+		</dependency>
 	</dependencies>
 </project>
